--- a/main.css
+++ b/main.css
@@ -6,9 +6,13 @@
     overflow: scroll;
 }
 
+#todolist::-webkit-scrollbar {
+    display: none;
+}
+
 #todolist > div {
     display: grid;
-    grid-template-columns: 20px auto;
+    grid-template-columns: 30px auto;
 }
 
 #todolist > div > p:first-child {
@@ -23,6 +27,10 @@
     scrollbar-width: none;
 }
 
+.task::-webkit-scrollbar {
+    display: none;
+}
+
 .task:focus {
     font-style: oblique;
 }
@@ -34,4 +42,8 @@
 .completed {
     text-decoration: line-through;
     color: #757575;
+}
+
+.completed::before {
+    content: 'x '
 }
