--- a/prompt.css
+++ b/prompt.css
@@ -3,15 +3,18 @@
 #prompt {
     /* position: fixed; */
     width: 90%;
-    padding: 11px 5% 0 5%;
+    padding: 15px 5% 20px 5%;
     display: grid;
     grid-template-columns: 20px auto 84px;
+    /* background: #000; */
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
 }
 
 .symb {
     color: #1ABAFF;
     padding-right: 10px;
-    animation: blinker 2s ease-in-out infinite;
+    animation: blinker 2.5s ease-in-out infinite;
 }
 
 @keyframes blinker {
@@ -29,7 +32,7 @@
 }
 
 #prompt > .text:hover {
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid #fefefe;
     font-style: normal;
     cursor: text;
 }
