--- a/global.css
+++ b/global.css
@@ -1,25 +1,31 @@
 * {
     font-family: 'Cousine', sans-serif;
-    color: #fff;
+    color: #fefefe;
     font-size: 16px;
     padding: 0;
     margin: 0;
     outline: none;
 }
 
-input:focus, button:focus {
+input[type=text]:focus {
     font-style: oblique;
-    color: #fff;
+    color: #fefefe;
 }
 
 button {
     font-weight: bold;
+    background: none;
+    border: none;
 }
 
 button:hover {
     font-style: oblique;
     cursor: pointer;
-    color: #fff;
+}
+
+button:active {
+    font-style: normal;
+    font-weight: normal;
 }
 
 input {
@@ -28,17 +34,14 @@ input {
     font-weight: bold;
 }
 
-input:hover {
+input[type=text]:hover {
     font-style: oblique;
     cursor: pointer;
-    color: #fff;
+    color: #fefefe;
 }
 
-button {
-    background: none;
-    border: none;
-    margin: 0;
-    padding: 0;
+input[type=button]:hover {
+    font-style: oblique;
 }
 
 body {
@@ -47,16 +50,16 @@ body {
 }
 
 #container {
+    transition: 0.5s;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px 0;
-    background: #1e1e1e;
+    background: #030303;
     width: 360px;
-    height: 500px;
+    height: 540px;
     border-radius: 5px;
     display: grid;
-    grid-template-rows: 33px auto 33px;
+    grid-template-rows: 53px auto 57px;
     box-shadow: 10px 10px 20px 0px #a2a2a2;
 }
